# Glint3D

./: .gitignore  .glint_history  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build-and-run.bat  build-and-run.sh  setup_glint_env.bat
.github/workflows/: ci.yml
ai/: FOR_DEVELOPERS.md  FOR_MACHINES.md  current_index.json
ai/contracts/: SUBAGENTS_ADDENDUM.md
ai/prompts/: TASK_MODULE_CREATION_PROMPT.md
ai/tasks/cross_platform_user_paths/: checklist.md  progress.ndjson  task.json
ai/tasks/cross_platform_user_paths/artifacts/: README.md
ai/tasks/cross_platform_user_paths/artifacts/documentation/: API_REFERENCE.md  PLATFORM_BEHAVIOR.md
ai/tasks/cross_platform_user_paths/artifacts/tests/: runtime_probe_results.ndjson  runtime_verification.md
ai/tasks/cross_platform_user_paths/artifacts/tests/runtime/data/: history.txt  recent.txt
ai/tasks/engine_modular_architecture/: checklist.md  progress.ndjson  task.json
ai/tasks/engine_modular_architecture/artifacts/: README.md
ai/tasks/engine_modular_architecture/artifacts/code/: refactor_patchset_notes.md
ai/tasks/engine_modular_architecture/artifacts/documentation/: architecture_migration_plan.md  current_layout_inventory.md  directory_mapping_matrix.md  output_directory_structure.md
ai/tasks/engine_modular_architecture/artifacts/validation/: build_matrix.md
ai/tasks/glint_cli_installer/: checklist.md  progress.ndjson  task.json
ai/tasks/glint_cli_installer/artifacts/: README.md
ai/tasks/glint_cli_installer/artifacts/documentation/: installer_distribution_plan.md
ai/tasks/glint_cli_platform_v1/: PROGRESS_SUMMARY.md  TESTING_GUIDE.md  checklist.md  progress.ndjson  task.json
ai/tasks/glint_cli_platform_v1/artifacts/code/: cli_architecture_overview.md  glint_init_scaffolding_design.md
ai/tasks/glint_cli_platform_v1/artifacts/documentation/: README.md  cli_product_spec.md  config_precedence_and_settings.md  glint_cli_command_reference.md  glint_project_manifest_and_run_manifest_spec.md  logging_migration_strategy.md
ai/tasks/glint_cli_platform_v1/artifacts/tests/: determinism_validation_smoke.md
ai/tasks/glint_cli_platform_v1/artifacts/validation/: determinism_run_manifest_samples.md
ai/tasks/glint_platform_contracts/: checklist.md  task.json
ai/tasks/glint_platform_contracts/artifacts/documentation/: README.md
ai/tasks/glint_rpc_daemon/: checklist.md  task.json
ai/tasks/glint_rpc_daemon/artifacts/documentation/: README.md
ai/tasks/glint_sdk_rollout/: checklist.md  task.json
ai/tasks/glint_sdk_rollout/artifacts/documentation/: README.md
ai/tasks/rendering_system_rhi_refactor/: checklist.md  progress.ndjson  task.json
ai/tasks/rendering_system_rhi_refactor/artifacts/: README.md
ai/tasks/rendering_system_rhi_refactor/artifacts/documentation/: architecture_audit_report.md
cli/include/glint/cli/: command_dispatcher.h  command_io.h  config_resolver.h  init_command.h  init_scaffolder.h  logger.h  ndjson_emitter.h
cli/include/glint/cli/commands/: assets_command.h  clean_command.h  config_command.h  convert_command.h  doctor_command.h  inspect_command.h  modules_command.h  profile_command.h  render_command.h  validate_command.h  watch_command.h
cli/include/glint/cli/services/: project_manifest.h  run_manifest_validator.h  run_manifest_writer.h  workspace_locks.h
cli/src/: command_dispatcher.cpp  command_io.cpp  config_resolver.cpp  init_command.cpp  init_scaffolder.cpp  logger.cpp  ndjson_emitter.cpp
cli/src/commands/: assets_command.cpp  clean_command.cpp  config_command.cpp  convert_command.cpp  doctor_command.cpp  inspect_command.cpp  modules_command.cpp  profile_command.cpp  render_command.cpp  validate_command.cpp  watch_command.cpp
cli/src/services/: project_manifest.cpp  run_manifest_validator.cpp  run_manifest_writer.cpp  workspace_locks.cpp
docs/: DoxegenLayout.xml  external_dependencies.md
docs/doxygen/: Doxyfile
engine/core/: README.md
engine/core/application/: README.md  application_core.cpp  application_core.h  cli_parser.cpp  cli_parser.h  help_text.h  main.cpp
engine/core/io/: README.md  resource_paths.cpp  resource_paths.h  user_paths.cpp  user_paths.h
engine/core/io/importers/: README.md
engine/core/rendering/: README.md  gl_platform.h  render_utils.h
engine/core/scene/: README.md
engine/include/: ui_bridge.h  user_paths.h
engine/modules/: README.md
engine/modules/gizmos/: README.md  axisrenderer.h  gizmo.h  grid.h
engine/modules/post_processing/: README.md
engine/modules/raytracing/: BVHNode.h  README.md  RayUtils.h  brdf.h  microfacet_sampling.h  ray.h  raytracer.h  raytracer_lighting.h  refraction.h  triangle.h
engine/platform/: README.md
engine/platform/desktop/: README.md  file_dialog.cpp  imgui_ui_layer.cpp  ui_bridge.cpp
engine/platform/desktop/panels/: README.md  scene_tree_panel.cpp
engine/platform/web/: README.md
engine/src/: application_core.cpp  imgui_ui_layer.cpp  light.cpp  main.cpp  render_system.cpp  shader.cpp  ui_bridge.cpp  user_paths.cpp
engine/src/panels/: scene_tree_panel.cpp
output/: README.md
output/cache/: README.md
output/exports/: README.md
output/renders/: README.md
resources/templates/blank/: config.defaults.json  template.json
resources/templates/blank/shots/: README.md  SHOT000.json
resources/windows/: glint3d.rc.in
schemas/: run_manifest_v1_0_0.json
test_cli_workspace/: glint.project.json
tools/: build-and-run.bat  build-and-run.sh  generate-docs.bat  generate-docs.sh  generate-task-docs.py  user_paths_probe.cpp
